# http.server

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
http_server/: server.py
http_server/templates/: base.template  file.template  listing.template
