[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beauty-http-server"
version = "0.0.1"
authors = [
  { name="Lorenzo Di Fuccia", email="lorenzo.difuccia@gmail.com" },
]
description = "(Beautiful) replacement for the 'http.server' Python3 module. Allows file upload, preview and much more."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "Flask>=2.2.2",
    "humanize>=4.4.0",
    "waitress>=2.1.2"
]

[project.urls]
"Homepage" = "https://github.com/lorenzodifuccia/http.server"
"Bug Tracker" = "https://github.com/lorenzodifuccia/http.server/issues"

[project.scripts]
"http.server" = "http_server.server:main"
